# gc

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  format
src/: allocator.c  allocator.h  main.c  object_list.c  object_list.h
tests/: dag.c  double_ref.c  long_cycle.c  obj_list_resize.c  simple.c  string_object.c
